--- a/Proto1/Project/ULP_SEC_CAM/.project
+++ b/Proto1/Project/ULP_SEC_CAM/.project
@@ -45,6 +45,11 @@
 			<type>1</type>
 			<locationURI>CC3200_SDK_ROOT/example/common/udma_if.c</locationURI>
 		</link>
+		<link>
+			<name>wdt_if.c</name>
+			<type>1</type>
+			<location>C:/ti/CC3200SDK_1.1.0/cc3200-sdk/example/common/wdt_if.c</location>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
